# test-alembic-validation

./: .pre-commit-config.yaml  README.md  requirements.txt  test-workflow.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-validation.yml
server/: README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20250913_0554_9389b9b87dd7_initial_migration_with_users_and_posts_.py  20250913_0601_2036c8e50052_second_migration_add_email_verification.py  20250913_0601_cb31ca0c8bc5_third_migration_add_user_preferences_.py  20250913_0603_3cef0dfa8e18_merge_multiple_heads.py  20250913_0626_8d81a10d0a44_add_user_profile_table_creates_multiple_.py
server/app/core/: config.py
server/core/: models.py
